--- a/style.css
+++ b/style.css
@@ -101,10 +101,16 @@ input, textarea {
   font-size: 1em;
   padding: .5em;
 }
-input[type="submit"] {
+input[type="submit"],
+.form-submit {
   background-color: #eaeaea;
+  padding-top: .25em;
+  padding-bottom: .25em;
 }
-input[type="submit"]:hover {
+input[type="submit"]:hover,
+input[type="submit"]:focus,
+.form-submit:hover,
+.form-submit:focus {
   cursor: pointer;
   background-color: #000;
   border-color: #000;
