--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+/**
+ * Theme Stylesheet
+ *
+ * Only the style.min.css file is used to render the site.
+ * This one is just meant to be read by a human.
+ */
+
+/**
+ * Default colors
+ *
+ * Default colors depending on the system color scheme.
+ */
 @media (prefers-color-scheme: light) {
   :root {
     --color-background: #fff;
@@ -26,7 +38,7 @@
   }
 }
 
-/*
+/**
  * Structure
  */
 body {
@@ -36,7 +48,6 @@ body {
   font-size: 12pt;
   margin: 0;
 }
-
 #site {
   box-sizing: border-box;
   margin: 4em auto;
@@ -59,7 +70,7 @@ body {
   margin-top: 4em
 }
 
-/*
+/**
  * Content formatting
  */
 a {
@@ -109,7 +120,7 @@ u {
   text-decoration: underline;
 }
 
-/* Images */
+/* Images & media */
 figure {
   margin: 1em 0;
 }
@@ -169,8 +180,8 @@ textarea {
   width: 100%;
 }
 
-/*
- * Header
+/**
+ * Site Header
  */
 #site-title {
   margin: 0;
@@ -187,7 +198,7 @@ textarea {
   margin: .5em 0 0;
 }
 
-/*
+/**
  * Posts
  */
 .post-meta {
@@ -226,7 +237,7 @@ textarea {
   margin: 2em 0 4em;
 }
 
-/* Loop */
+/* Post List */
 .post-loop {
   margin-bottom: 2em;
 }
@@ -241,7 +252,7 @@ textarea {
   border-bottom: 0;
 }
 
-/* Single post */
+/* Single Post */
 .post-single .post-meta {
   margin-bottom: .5em
 }
@@ -277,7 +288,7 @@ textarea {
   margin: .5em 0 0;
 }
 
-/*
+/**
  * Comments
  */
 .comment-block {
@@ -345,7 +356,7 @@ textarea {
   border-bottom: 4px solid red;
 }
 
-/*
+/**
  * Pagination
  */
 .pagination {
@@ -394,6 +405,8 @@ textarea {
 
 /**
  * Responsiveness
+ *
+ * Styles used to display the site on mobile depending on the screen size.
  */
 @media only screen and (max-width: 600px) {
   #site {
@@ -430,9 +443,11 @@ textarea {
 
 /**
  * Print
+ *
+ * Styles used for printing only.
  */
 @media print {
-  :root{
+  :root {
     --color-background: #fff;
     --color-text-primary: #000;
     --color-text-secondary: rgb(0, 0, 0, 0.65);
