Actualisation de règles dans la feuille de styles

--- a/style.css
+++ b/style.css
@@ -116,8 +116,12 @@ strong {
 em {
   font-style: italic;
 }
-u {
+del {
   text-decoration: underline;
+}
+mark {
+  background-color: rgb(255, 255, 0, 0.85);
+  color: #000;
 }
 
 /* Images & media */
