--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ figure p {
 input, textarea {
   background-color: var(--color-input-background);
   border: 1px solid var(--color-border);
-  border-radius: 4px;
+  border-radius: 0;
   box-sizing: border-box;
   color: var(--color-input-text);
   font-family: inherit;
@@ -240,6 +240,9 @@ textarea {
 .post-footer {
   margin: 2em 0 4em;
 }
+#post-footer-print {
+  display: none;
+}
 
 /* Post List */
 .post-loop {
@@ -269,7 +272,7 @@ textarea {
   margin-bottom: .5em
 }
 .post-pagination {
-  color: #565656;
+  color: var(--color-text-secondary);
   display: flex;
   margin-top: 4em;
 }
@@ -283,7 +286,6 @@ textarea {
 }
 .content-label {
   background-color: var(--color-input-background);
-  border-radius: 4px;
   display: inline-block;
   font-size: .8em;
   line-height: 1;
@@ -336,7 +338,6 @@ textarea {
 }
 .comment-preview {
   border: 1px solid var(--color-border);
-  border-radius: 4px;
   margin-bottom: 2em;
   padding: 1em;
 }
@@ -470,23 +471,54 @@ textarea {
     --color-input-background: #eaeaea;
     --color-input-background-hover: #000;
   }
-  body {
-    font-size: 12pt;
+  @page {
+    size: portrait;
+    margin: 2cm 3cm;
+  }
+  #site {
+    font-size: initial;
+    margin: 0;
+    max-width: 100%;
   }
   #main-menu,
-  #comment-form,
-  #site-footer-menu {
+  .post-pagination,
+  .comment-block,
+  #site-sidebar,
+  #site-footer {
     display: none;
   }
+  #site-header {
+    margin-bottom: 2em;
+  }
+  #site-content {
+    margin-top: 2em;
+    margin-bottom: 0
+  }
+  a {
+    border-bottom: none;
+  }
   h1, h2, h3, h4, h5, h6 {
-    page-break-after:avoid;
-    page-break-inside:avoid;
+    page-break-after: avoid;
+    page-break-inside: avoid;
   }
   img {
-    page-break-inside:avoid;
-    page-break-after:avoid;
+    page-break-inside: avoid;
+    page-break-after: avoid;
   }
   .content a[href^=http]:after {
     content: " [" attr(href) "]";
+  }
+  .post-footer {
+    margin-bottom: 0;
+  }
+  #post-footer-print {
+    display: block;
+  }
+}
+@media print and (orientation: landscape) {
+  body {
+    columns: 2;
+    column-fill: auto;
+    column-gap: 3cm;
   }
 }
