--- a/style.css
+++ b/style.css
@@ -154,10 +154,12 @@ input[type="submit"],
   padding-top: .25em;
   padding-bottom: .25em;
 }
-input[type="submit"]:hover,
+input[type="submit"]:active,
 input[type="submit"]:focus,
-.form-submit:hover,
-.form-submit:focus {
+input[type="submit"]:hover,
+.form-submit:active,
+.form-submit:focus,
+.form-submit:hover {
   cursor: pointer;
   background-color: var(--color-input-background-hover);
   border-color: var(--color-input-background-hover);
@@ -256,16 +258,19 @@ textarea {
 }
 .post-loop .post-meta a,
 .post-loop .post-title a {
-  border-bottom: 0;
-}
-.post-excerpt {
-  color: var(--color-text-secondary);
-  font-size: .9em;
-  margin-top: .25em;
+  border-bottom: none;
 }
 .post-excerpt a {
   border-bottom: none;
+  color: var(--color-text-secondary);
   display: block;
+  font-size: .9em;
+  margin-top: .25em;
+}
+.post-excerpt a:active,
+.post-excerpt a:focus,
+.post-excerpt a:hover {
+  color: var(--color-link);
 }
 
 /* Single Post */
@@ -318,7 +323,10 @@ textarea {
   padding: 0;
 }
 .comment, .ping {
-  margin: 2em 0;
+  border-left: 1px solid var(--color-border);
+  margin-top: 2em;
+  margin-bottom: 2em;
+  padding-left: 1em;
 }
 .comment-meta {
   color: var(--color-text-secondary);
@@ -328,10 +336,8 @@ textarea {
   font-style: normal;
   font-weight: 700;
 }
-.comment-content {
-  border-left: 1px solid var(--color-border);
-  margin-top: 1em;
-  padding-left: 1em;
+.comment-date {
+  font-size: .9em;
 }
 .comment-content p {
   margin-top: .5em;
