--- a/style.css
+++ b/style.css
@@ -132,8 +132,8 @@ img.media {
   display: block;
 }
 figure p {
-  margin: 0;
   font-size: .9em;
+  margin: 0;
 }
 
 /* Forms */
@@ -239,6 +239,9 @@ textarea {
 }
 .content ul, .content ol {
   margin: 1em 0;
+}
+.content img {
+  max-width: 100%;
 }
 .post-footer {
   margin: 2em 0 4em;
