--- a/style.css
+++ b/style.css
@@ -208,6 +208,9 @@ textarea {
 /**
  * Posts
  */
+.post .content-label {
+  margin-bottom: 1em;
+}
 .post-meta {
   color: var(--color-text-secondary);
   font-size: .9em;
@@ -253,6 +256,10 @@ textarea {
 /* Post List */
 .post-list {
   margin-bottom: 2em;
+}
+.post-selected {
+  border: 1px solid var(--color-border);
+  padding: 1em;
 }
 .post-list:last-child {
   margin-bottom: 0;
@@ -301,8 +308,10 @@ textarea {
   display: inline-block;
   font-size: .8em;
   line-height: 1;
-  margin-bottom: .5em;
   padding: .5em;
+}
+.content-info .content-label {
+  margin-bottom: .5em;
 }
 .content-meta {
   margin-bottom: .5em;
