--- a/style.css
+++ b/style.css
@@ -257,9 +257,15 @@ textarea {
 .post-list {
   margin-bottom: 2em;
 }
-.post-selected {
-  border: 1px solid var(--color-border);
-  padding: 1em;
+.post-short-selected .post-short-selected-content {
+  border-left: 1px solid var(--color-border);
+  padding: 1em 0 1em 1em;
+}
+.post-short-selected-label {
+  border-bottom: 1px solid var(--color-border);
+  color: var(--color-text-secondary);
+  display: inline-block;
+  font-size: .8em;
 }
 .post-list:last-child {
   margin-bottom: 0;
