Ajout de styles pour les balises pre et code

--- a/style.css
+++ b/style.css
@@ -123,6 +123,21 @@ mark {
   color: #000;
   background-color: rgb(255, 255, 0, 0.85);
 }
+code {
+  background-color: var(--color-input-background);
+	font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+	font-size: 1em;
+  text-align: left;
+	white-space: normal;
+}
+pre {
+  display: block;
+  margin: 1em 0;
+  padding: .5em;
+}
+code {
+  display: inline;
+}
 
 /* Images & media */
 figure {
