--- a/style.css
+++ b/style.css
@@ -123,7 +123,8 @@ mark {
   color: #000;
   background-color: rgb(255, 255, 0, 0.85);
 }
-code {
+code,
+pre {
   background-color: var(--color-input-background);
 	font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
 	font-size: 1em;
