--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ pre {
 	font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
 	font-size: 1em;
   text-align: left;
-	white-space: normal;
+	white-space: pre-wrap;
 }
 pre {
   display: block;
