--- a/style.css
+++ b/style.css
@@ -418,6 +418,10 @@ textarea {
   border-top: 4px solid red;
   border-bottom: 4px solid red;
 }
+.comments-feed-link {
+  font-size: .9em;
+  margin-top: 1em;
+}
 
 /**
  * Pagination
