--- a/style.css
+++ b/style.css
@@ -133,6 +133,10 @@ pre {
 }
 pre {
   display: block;
+  -webkit-hyphens: none;
+     -moz-hyphens: none;
+      -ms-hyphens: none;
+          hyphens: none;
   margin: 1em 0;
   padding: .5em;
 }
@@ -224,8 +228,13 @@ textarea {
 /**
  * Posts
  */
-.post .content-label {
+.post-selected-label {
+  background-color: var(--color-input-background);
+  display: inline-block;
+  font-size: .8em;
+  line-height: 1;
   margin-bottom: 1em;
+  padding: .5em;
 }
 .post-meta {
   color: var(--color-text-secondary);
@@ -273,15 +282,15 @@ textarea {
 .post-list {
   margin-bottom: 2em;
 }
-.post-short-selected .post-short-selected-content {
-  border-left: 1px solid var(--color-border);
-  padding: 1em 0 1em 1em;
-}
-.post-short-selected-label {
+.post-list-selected-label {
   border-bottom: 1px solid var(--color-border);
   color: var(--color-text-secondary);
   display: inline-block;
   font-size: .8em;
+}
+.post-list-selected-content {
+  border-left: 1px solid var(--color-border);
+  padding: 1em 0 1em 1em;
 }
 .post-list:last-child {
   margin-bottom: 0;
@@ -420,7 +429,7 @@ textarea {
 }
 .comments-feed-link {
   font-size: .9em;
-  margin-top: 1em;
+  margin-top: 2em;
 }
 
 /**
@@ -538,8 +547,11 @@ textarea {
     max-width: 100%;
   }
   #main-menu,
+  .post-selected-label,
+  .post-list-selected-label,
   .post-pagination,
   #comment-form,
+  .comments-feed-link,
   #site-sidebar,
   #site-footer {
     display: none;
