--- a/style.css
+++ b/style.css
@@ -10,21 +10,20 @@
  *
  * Default colors depend on the system color scheme or accessibility options.
  */
-@media (prefers-color-scheme: light) and (prefers-contrast: no-preference) {
-  :root {
-    --color-background: #fff;
-    --color-text-primary: #000;
-    --color-text-secondary: #595959; /* rgb(0, 0, 0, 0.65) */
-    --color-link: #de0000;
-    --color-border: #aaa;
-    --color-input-text: #000;
-    --color-input-text-hover: #fff;
-    --color-input-background: #eaeaea;
-    --color-input-background-hover: #000;
-  }
+:root { /* "prefers-color-scheme: light" not used for better browser support. */
+  --color-background: #fff;
+  --color-text-primary: #000;
+  --color-text-secondary: #595959; /* rgb(0, 0, 0, 0.65) */
+  --color-link: #de0000;
+  --color-border: #aaa;
+  --color-input-text: #000;
+  --color-input-text-hover: #fff;
+  --color-input-background: #eaeaea;
+  --color-input-background-hover: #000;
 }
 
-@media (prefers-color-scheme: dark) and (prefers-contrast: no-preference) {
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
   :root {
     --color-background: #16161D;
     --color-text-primary: #d9d9d9; /* rgb(255, 255, 255, 0.85) */
@@ -38,8 +37,12 @@
   }
 }
 
-@media not (prefers-contrast: no-preference) {
-  body {
+/* Accessibility: high contrast mode */
+@media (prefers-contrast: more),
+       (prefers-contrast: less),
+       (-ms-high-contrast: active),
+       (-ms-high-contrast: black-on-white) {
+  :root {
     --color-background: #fff;
     --color-text-primary: #000;
     --color-text-secondary: #000;
@@ -88,17 +91,18 @@ body {
  * Content formatting
  */
 a {
-  border-bottom-color: inherit;
-  border-bottom-style: dotted;
-  border-bottom-width: 1px;
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  text-underline-offset: 5px;
+  transition: all .2s ease-in-out;
 }
 a:active,
 a:focus,
 a:hover {
-  border-bottom-style: solid;
   color: var(--color-link);
+  text-decoration-style: solid;
+  transition: all .2s ease-in-out;
 }
 p {
   margin: 1em 0;
@@ -239,7 +243,7 @@ textarea {
   margin: 0;
 }
 #site-title a {
-  border-bottom: 0;
+  text-decoration: none;
 }
 #site-description {
   color: var(--color-text-secondary);
@@ -343,16 +347,16 @@ textarea {
 }
 .post-list .post-meta a,
 .post-list .post-title a {
-  border-bottom: none;
+  text-decoration: none;
 }
 .post-excerpt {
   margin-top: .25em;
 }
 .post-excerpt a {
-  border-bottom: none;
   color: var(--color-text-secondary);
   display: block;
   font-size: .9em;
+  text-decoration: none;
 }
 .post-excerpt a:active,
 .post-excerpt a:focus,
@@ -579,15 +583,40 @@ textarea {
   z-index: 100000;
 }
 
-/* High contrast */
-@media not (prefers-contrast: no-preference) {
+/* High contrasts */
+@media (prefers-contrast: more),
+       (prefers-contrast: less),
+       (-ms-high-contrast: active),
+       (-ms-high-contrast: black-on-white) {
   a {
-    border-bottom-style: solid;
+    text-decoration-style: solid;
+  }
+  a:active,
+  a:focus,
+  a:hover,
+  .post-excerpt a:active,
+  .post-excerpt a:focus,
+  .post-excerpt a:hover {
+    background-color: var(--color-text-primary);
+    color: var(--color-background);
+    text-decoration-color: var(--color-text-primary);
   }
   .content-label,
   .ping-label,
   .post-selected-label {
     border: 1px solid var(--color-border);
+  }
+}
+
+/* Remove animations */
+@media (prefers-reduced-motion: reduce) {
+  a {
+    transition: none;
+  }
+  a:active,
+  a:focus,
+  a:hover {
+    transition: none;
   }
 }
 
