--- a/style.css
+++ b/style.css
@@ -5,6 +5,39 @@
  * This one is just meant to be read by humans.
  */
 
+/**
+ * Styles used in __layout.html before being inlined.
+ *
+:root { // "prefers-color-scheme: light" not used for better browser support.
+  --color-background: #fff;
+  --color-text-primary: #000;
+  --color-text-secondary: #595959; // rgb(0, 0, 0, 0.65)
+  --color-link: #de0000;
+  --color-border: #aaa;
+  --color-input-text: #000;
+  --color-input-text-hover: #fff;
+  --color-input-background: #eaeaea;
+  --color-input-background-hover: #000;
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-background: #16161D;
+    --color-text-primary: #d9d9d9; // rgb(255, 255, 255, 0.85)
+    --color-text-secondary: #8c8c8c; // rgb(255, 255, 255, 0.55)
+    --color-link: #f14646;
+    --color-border: #aaa;
+    --color-input-text: #d9d9d9;
+    --color-input-text-hover: #fff;
+    --color-input-background: #333333; // rgb(255, 255, 255, 0.2)
+    --color-input-background-hover: #262626; //rgb(255, 255, 255, 0.15)
+  }
+}
+body {
+  font-family: "Iowan Old Style", "Apple Garamond", Baskerville, "Times New Roman", "Droid Serif", Times, "Source Serif Pro", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 12pt;
+}
+*/
+
 /* Accessibility: high contrast mode */
 @media (prefers-contrast: more),
        (prefers-contrast: less),
@@ -61,14 +94,12 @@ a {
   text-decoration: underline;
   text-decoration-style: dotted;
   text-underline-offset: 5px;
-  transition: all .2s ease-in-out;
 }
 a:active,
 a:focus,
 a:hover {
   color: var(--color-link);
   text-decoration-style: solid;
-  transition: all .2s ease-in-out;
 }
 p {
   margin: 1em 0;
@@ -549,18 +580,6 @@ textarea {
   .ping-label,
   .post-selected-label {
     border: 1px solid var(--color-border);
-  }
-}
-
-/* Remove animations */
-@media (prefers-reduced-motion: reduce) {
-  a {
-    transition: none;
-  }
-  a:active,
-  a:focus,
-  a:hover {
-    transition: none;
   }
 }
 
