Différenciation billets/pages dans la recherche

--- a/style.css
+++ b/style.css
@@ -159,6 +159,13 @@ pre {
 code {
   display: inline;
 }
+.label {
+  background-color: var(--color-input-background);
+  display: inline-block;
+  font-size: .8em;
+  line-height: 1;
+  padding: .5em;
+}
 
 /* Images & media */
 figure {
@@ -395,13 +402,6 @@ textarea {
   margin-top: 2em;
   margin-bottom: 2em;
 }
-.ping-label {
-  background-color: var(--color-input-background);
-  display: inline-block;
-  font-size: .8em;
-  line-height: 1;
-  padding: .5em;
-}
 .comment-meta {
   color: var(--color-text-secondary);
   margin-bottom: 1em;
@@ -577,7 +577,7 @@ textarea {
     text-decoration-color: var(--color-text-primary);
   }
   .content-label,
-  .ping-label,
+  .label,
   .post-selected-label {
     border: 1px solid var(--color-border);
   }
