--- a/style.css
+++ b/style.css
@@ -195,8 +195,16 @@ textarea {
   max-width: 100%;
   padding: .5em;
 }
+.button {
+  border: 1px solid var(--color-border);
+  display: inline-block;
+  padding-right: .5em;
+  padding-left: .5em;
+  text-decoration: none;
+}
 input[type="submit"],
-.form-submit {
+.form-submit,
+.button {
   background-color: var(--color-input-background);
   padding-top: .25em;
   padding-bottom: .25em;
@@ -204,6 +212,9 @@ input[type="submit"],
 input[type="submit"]:active,
 input[type="submit"]:focus,
 input[type="submit"]:hover,
+.button:active,
+.button:focus,
+.button:hover,
 .form-submit:active,
 .form-submit:focus,
 .form-submit:hover {
@@ -389,8 +400,8 @@ textarea {
 .comment-block {
   margin: 4em 0;
 }
-#comments-title::first-letter {
-  text-transform: capitalize;
+.comment-count {
+  color: var(--color-text-secondary);
 }
 #comments-list {
   list-style: none;
@@ -436,29 +447,32 @@ textarea {
 #comment-form h3 {
   margin-bottom: 1em;
 }
-.comment-message {
-  display: inline-block;
-  font-weight: bold;
-  margin-bottom: 2em;
-  padding: .5em 0;
-}
 #comment-form .remember {
   margin: .5em 0;
 }
 #comment-form .remember input[type="checkbox"] {
   margin-left: 0;
 }
+.comment-message {
+  border-style: solid;
+  border-width: 4px;
+  display: block;
+  font-weight: bold;
+  margin-bottom: 2em;
+  padding: .5em;
+  text-align: center;
+}
 .message-green {
-  border-top: 4px solid green;
-  border-bottom: 4px solid green;
+  border-color: green;
 }
 .message-orange {
-  border-top: 4px solid orange;
-  border-bottom: 4px solid orange;
+  border-color: orange;
 }
 .message-red {
-  border-top: 4px solid red;
-  border-bottom: 4px solid red;
+  border-color: red;
+}
+.comment-private {
+  margin-top: 4em;
 }
 .comment-links ul {
   color: var(--color-text-secondary);
