--- a/style.css
+++ b/style.css
@@ -425,6 +425,9 @@ textarea {
 .comment-date {
   font-size: .9em;
 }
+.comment-date a {
+  text-decoration: none;
+}
 .comment-content {
   border-left: 1px solid var(--color-border);
   padding-left: 1em;
